<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardView:cardCornerRadius="@dimen/cornerradius_cardview">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:transitionName="@string/transitionname_picture"
            android:scaleType="centerCrop" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="10dp"
            android:background="@color/backgroundtext_card"
            android:paddingBottom="15dp">
            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"

                    android:textSize="@dimen/firstword_card"/>
                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"/>
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop_card">
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:id="@+id/likeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likenumber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"/>
                />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>